chore: Import i18n texts

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -140,7 +140,7 @@
   "common.label.system": "System",
   "common.label.table_disabled_status": "Disabled status",
   "common.label.target": "Target",
-  "common.label.tasks_has_been_interrupted": "Task stopped",
+  "common.label.tasks_has_been_interrupted": "The task has been stopped.",
   "common.label.test": "Test",
   "common.label.time": "Time",
   "common.label.tip": "Tip",
@@ -315,7 +315,7 @@
   "error.http.duplicated_gateway_eui": "Gateway with the same EUI already exists.",
   "error.http.entity_attribute_min_invalid": "The minimum value for entity attributes must be a number.",
   "error.http.entity_tag_name_already_exists": "The tag name already exists.",
-  "error.http.entity_tag_not_found": "The tag does not exist.",
+  "error.http.entity_tag_not_found": "There are unavailable tags. Please select again.",
   "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
   "error.http.entity_value_invalid_enum": "{entity_name} can only use items from “{enum}” as values.",
   "error.http.entity_value_length_invalid_enum": "The length of the value of {entity_name} should be within the range: {length_range}.",
@@ -323,16 +323,16 @@
   "error.http.entity_value_length_out_of_range": "The length of the value of {entity_name} should be between {min_length} and {max_length}.",
   "error.http.entity_value_length_shorter_than_min_length": "The length of the value of {entity_name} must not be less than {min_length}.",
   "error.http.entity_value_less_than_min": "The value of {entity_name} must not be less than {min}.",
-  "error.http.entity_value_not_match_format": "The value of {entity_name} does not comply with the formatting rules: {fomat}.",
+  "error.http.entity_value_not_match_format": "The value of {entity_name} does not comply with the formatting rules: {format}.",
   "error.http.entity_value_not_match_type": "The type of {entity_name} is invalid. Valid types: {required_type}.",
   "error.http.entity_value_null": "The value of entity {entity_name} is empty.",
   "error.http.entity_value_out_of_range": "The value of {entity_name} should be between {min} and {max}.",
-  "error.http.entity_value_validation_error": "The value of {enetity_name} failed validation.",
+  "error.http.entity_value_validation_error": "The value of {entity_name} failed validation.",
   "error.http.forbidden_permission": "No access rights, and access is prohibited.",
   "error.http.gateway_no_application": "No applications have been created in the gateway.",
   "error.http.gateway_no_device_profile": "No device profiles have been added to the gateway.",
   "error.http.gateway_request_timeout": "Gateway request timed out.",
-  "error.http.gateway_respond_error": "The gateway returned an error message.",
+  "error.http.gateway_respond_error": "Gateway returned error: {error}",
   "error.http.json_validate_error": "JSON validation error.",
   "error.http.method_not_allowed": "Disallowed Http Methods",
   "error.http.msc_another_task_running": "There is a task in progress.",
@@ -511,6 +511,7 @@
   "tag.label.replace_tag": "Replace Selected Tags",
   "tag.label.tags": "Tags",
   "tag.tip.bulk_delete_tag": "Once deleted, these {1} tags will be removed from all associated entities. Are you sure you want to delete these {1} tags?",
+  "tag.tip.edit_tag_info": "If you modify the information in this tag, all entities that use this tag will synchronize the modification.",
   "tag.tip.not_any_tags": "No tags",
   "tag.tip.selected_entities_contain_follow_tags": "Selected {1} entities with the following tags:",
   "tag.tip.single_delete_tag": "Once deleted, this tag will be removed from all associated items and no longer displayed. Are you sure you want to delete the tag: {1}?",
