--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -21,7 +21,7 @@
     "error.http.duplicated_gateway_eui": "Gateway with the same EUI already exists.",
     "error.http.entity_attribute_min_invalid": "The minimum value for entity attributes must be a number.",
     "error.http.entity_tag_name_already_exists": "The tag name already exists.",
-    "error.http.entity_tag_not_found": "The tag does not exist.",
+    "error.http.entity_tag_not_found": "There are unavailable tags. Please select again.",
     "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
     "error.http.entity_value_invalid_enum": "{entity_name} can only use items from “{enum}” as values.",
     "error.http.entity_value_length_invalid_enum": "The length of the value of {entity_name} should be within the range: {length_range}.",
@@ -29,11 +29,11 @@
     "error.http.entity_value_length_out_of_range": "The length of the value of {entity_name} should be between {min_length} and {max_length}.",
     "error.http.entity_value_length_shorter_than_min_length": "The length of the value of {entity_name} must not be less than {min_length}.",
     "error.http.entity_value_less_than_min": "The value of {entity_name} must not be less than {min}.",
-    "error.http.entity_value_not_match_format": "The value of {entity_name} does not comply with the formatting rules: {fomat}.",
+    "error.http.entity_value_not_match_format": "The value of {entity_name} does not comply with the formatting rules: {format}.",
     "error.http.entity_value_not_match_type": "The type of {entity_name} is invalid. Valid types: {required_type}.",
     "error.http.entity_value_null": "The value of entity {entity_name} is empty.",
     "error.http.entity_value_out_of_range": "The value of {entity_name} should be between {min} and {max}.",
-    "error.http.entity_value_validation_error": "The value of {enetity_name} failed validation.",
+    "error.http.entity_value_validation_error": "The value of {entity_name} failed validation.",
     "error.http.forbidden_permission": "No access rights, and access is prohibited.",
     "error.http.gateway_no_application": "No applications have been created in the gateway.",
     "error.http.gateway_no_device_profile": "No device profiles have been added to the gateway.",
