--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -140,7 +140,7 @@
     "common.label.system": "System",
     "common.label.table_disabled_status": "Disabled status",
     "common.label.target": "Target",
-    "common.label.tasks_has_been_interrupted": "Task stopped",
+    "common.label.tasks_has_been_interrupted": "The task has been stopped.",
     "common.label.test": "Test",
     "common.label.time": "Time",
     "common.label.tip": "Tip",
