--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -315,24 +315,24 @@
   "error.http.duplicated_gateway_eui": "已存在相同EUI的网关。",
   "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字。",
   "error.http.entity_tag_name_already_exists": "标签名称已存在。",
-  "error.http.entity_tag_not_found": "标签不存在。",
+  "error.http.entity_tag_not_found": "存在不可用标签，请重新选择。",
   "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
   "error.http.entity_value_invalid_enum": "{entity_name}只能使用“{enum}”中的项作为值。",
   "error.http.entity_value_length_invalid_enum": "{entity_name}值的长度，应在范围：{length_range}内。",
   "error.http.entity_value_length_longer_than_max_length": "{entity_name}值的长度，不允许大于{max_length}。",
-  "error.http.entity_value_length_out_of_range": "{enetity_name}值的长度，应在{min_length}到{max_length}之间。",
+  "error.http.entity_value_length_out_of_range": "{entity_name}值的长度，应在{min_length}到{max_length}之间。",
   "error.http.entity_value_length_shorter_than_min_length": "{entity_name}值的长度，不允许小于{min_length}。",
   "error.http.entity_value_less_than_min": "{entity_name}的值不允许小于{min}。",
-  "error.http.entity_value_not_match_format": "{entity_name}的值，不符合格式化规则：{fomat}。",
+  "error.http.entity_value_not_match_format": "{entity_name}的值，不符合格式化规则：{format}。",
   "error.http.entity_value_not_match_type": "{entity_name}类型不合法，合法类型:{required_type}。",
   "error.http.entity_value_null": "实体{entity_name}的值为空。",
   "error.http.entity_value_out_of_range": "{entity_name}的值，应在{min}到{max}之间。",
-  "error.http.entity_value_validation_error": "{enetity_name}的值校验失败。",
+  "error.http.entity_value_validation_error": "{entity_name}的值校验失败。",
   "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
   "error.http.gateway_no_application": "网关中未创建任何application。",
   "error.http.gateway_no_device_profile": "网关未添加任何设备profile。",
   "error.http.gateway_request_timeout": "网关请求超时。",
-  "error.http.gateway_respond_error": "网关返回了错误信息。",
+  "error.http.gateway_respond_error": "网关返回错误: {error}",
   "error.http.json_validate_error": "JSON 检验错误。",
   "error.http.method_not_allowed": "不允许的HTTP方法",
   "error.http.msc_another_task_running": "存在一个执行中的任务。",
@@ -511,6 +511,7 @@
   "tag.label.replace_tag": "替换所选标签",
   "tag.label.tags": "标签",
   "tag.tip.bulk_delete_tag": "删除后，所有使用了这些标签的实体，都将不再展示该标签。确认删除这 {1} 个标签吗？",
+  "tag.tip.edit_tag_info": "如果您修改了该标签的信息，所有使用该标签的实体，都会同步该修改。",
   "tag.tip.not_any_tags": "没有标签",
   "tag.tip.selected_entities_contain_follow_tags": "{1}个实体已被选中，包含以下标签：",
   "tag.tip.single_delete_tag": "删除后，所有使用了该标签的实体，都将不再展示该标签。确认删除标签: {1} 吗？",
