--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -21,19 +21,19 @@
     "error.http.duplicated_gateway_eui": "已存在相同EUI的网关。",
     "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字。",
     "error.http.entity_tag_name_already_exists": "标签名称已存在。",
-    "error.http.entity_tag_not_found": "标签不存在。",
+    "error.http.entity_tag_not_found": "存在不可用标签，请重新选择。",
     "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
     "error.http.entity_value_invalid_enum": "{entity_name}只能使用“{enum}”中的项作为值。",
     "error.http.entity_value_length_invalid_enum": "{entity_name}值的长度，应在范围：{length_range}内。",
     "error.http.entity_value_length_longer_than_max_length": "{entity_name}值的长度，不允许大于{max_length}。",
-    "error.http.entity_value_length_out_of_range": "{enetity_name}值的长度，应在{min_length}到{max_length}之间。",
+    "error.http.entity_value_length_out_of_range": "{entity_name}值的长度，应在{min_length}到{max_length}之间。",
     "error.http.entity_value_length_shorter_than_min_length": "{entity_name}值的长度，不允许小于{min_length}。",
     "error.http.entity_value_less_than_min": "{entity_name}的值不允许小于{min}。",
-    "error.http.entity_value_not_match_format": "{entity_name}的值，不符合格式化规则：{fomat}。",
+    "error.http.entity_value_not_match_format": "{entity_name}的值，不符合格式化规则：{format}。",
     "error.http.entity_value_not_match_type": "{entity_name}类型不合法，合法类型:{required_type}。",
     "error.http.entity_value_null": "实体{entity_name}的值为空。",
     "error.http.entity_value_out_of_range": "{entity_name}的值，应在{min}到{max}之间。",
-    "error.http.entity_value_validation_error": "{enetity_name}的值校验失败。",
+    "error.http.entity_value_validation_error": "{entity_name}的值校验失败。",
     "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
     "error.http.gateway_no_application": "网关中未创建任何application。",
     "error.http.gateway_no_device_profile": "网关未添加任何设备profile。",
