--- a/packages/locales/src/lang/cn/tag.json
+++ b/packages/locales/src/lang/cn/tag.json
@@ -5,6 +5,7 @@
     "tag.label.replace_tag": "替换所选标签",
     "tag.label.tags": "标签",
     "tag.tip.bulk_delete_tag": "删除后，所有使用了这些标签的实体，都将不再展示该标签。确认删除这 {1} 个标签吗？",
+    "tag.tip.edit_tag_info": "如果您修改了该标签的信息，所有使用该标签的实体，都会同步该修改。",
     "tag.tip.not_any_tags": "没有标签",
     "tag.tip.selected_entities_contain_follow_tags": "{1}个实体已被选中，包含以下标签：",
     "tag.tip.single_delete_tag": "删除后，所有使用了该标签的实体，都将不再展示该标签。确认删除标签: {1} 吗？",
@@ -15,6 +16,5 @@
     "tag.title.replace_with": "替换",
     "tag.title.tag_management": "标签管理",
     "tag.title.tag_name": "标签名称",
-    "tag.title.tagged_entities": "关联的实体",
-    "tag.tip.edit_tag_info": "如果您修改了该标签的信息，所有使用该标签的实体，都会同步该修改。"
+    "tag.title.tagged_entities": "关联的实体"
 }
