chore: Import i18n texts

--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -23,7 +23,7 @@
     "error.http.entity_tag_name_already_exists": "标签名称已存在。",
     "error.http.entity_tag_not_found": "存在不可用标签，请重新选择。",
     "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
-    "error.http.entity_value_invalid_enum": "{entity_name}只能使用“{enum}”中的项作为值。",
+    "error.http.entity_value_invalid_enum": "字段{entity_name}的值只能为系统给出的枚举项。",
     "error.http.entity_value_length_invalid_enum": "{entity_name}值的长度，应在范围：{length_range}内。",
     "error.http.entity_value_length_longer_than_max_length": "{entity_name}值的长度，不允许大于{max_length}。",
     "error.http.entity_value_length_out_of_range": "{entity_name}值的长度，应在{min_length}到{max_length}之间。",
@@ -43,7 +43,7 @@
     "error.http.method_not_allowed": "不允许的HTTP方法",
     "error.http.msc_another_task_running": "存在一个执行中的任务。",
     "error.http.msc_api_error": "Milesight Development Platform集成的API返回了错误信息：{msg}。",
-    "error.http.msc_connection_not_ready": "Milesight Development平台集成的连接不可用。",
+    "error.http.msc_connection_not_ready": "Milesight Development平台集成尚未连接成功。",
     "error.http.name_repeated": "名称重复",
     "error.http.network_timeout": "网络连接超时。",
     "error.http.no_valid_profile_for_device": "网关未提供设备需要的profile。",
