--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -23,7 +23,7 @@
     "error.http.entity_tag_name_already_exists": "The tag name already exists.",
     "error.http.entity_tag_not_found": "There are unavailable tags. Please select again.",
     "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
-    "error.http.entity_value_invalid_enum": "{entity_name} can only use items from “{enum}” as values.",
+    "error.http.entity_value_invalid_enum": "The value of the field {entity_name} can only be an enumeration item provided by the system.",
     "error.http.entity_value_length_invalid_enum": "The length of the value of {entity_name} should be within the range: {length_range}.",
     "error.http.entity_value_length_longer_than_max_length": "The length of the value of {entity_name} must not exceed {max_length}.",
     "error.http.entity_value_length_out_of_range": "The length of the value of {entity_name} should be between {min_length} and {max_length}.",
@@ -43,7 +43,7 @@
     "error.http.method_not_allowed": "Disallowed Http Methods",
     "error.http.msc_another_task_running": "There is a task in progress.",
     "error.http.msc_api_error": "The API of Milesight Development Platform integration returned an error message: {msg}.",
-    "error.http.msc_connection_not_ready": "The connection integrated into the Milesight Development platform is unavailable.",
+    "error.http.msc_connection_not_ready": "Milesight Development platform integration has not been successfully connected.",
     "error.http.name_repeated": "Repetition of names",
     "error.http.network_timeout": "Network connection timeout.",
     "error.http.no_valid_profile_for_device": "The gateway does not provide the profile required by the device.",
