chore: Import i18n texts

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -313,7 +313,9 @@
   "error.http.device_template_validate_error": "Device template validation error",
   "error.http.duplicated_device_eui": "Device with the same EUI already exists.",
   "error.http.duplicated_gateway_eui": "Gateway with the same EUI already exists.",
+  "error.http.entity_attribute_min_greater_than_max": "The minimum value of the entity should not be greater than the maximum value.",
   "error.http.entity_attribute_min_invalid": "The minimum value for entity attributes must be a number.",
+  "error.http.entity_attribute_min_length_greater_than_max_length": "The minimum length of an entity should not exceed the maximum length.",
   "error.http.entity_tag_name_already_exists": "The tag name already exists.",
   "error.http.entity_tag_not_found": "There are unavailable tags. Please select again.",
   "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
@@ -584,9 +586,9 @@
   "valid.input.form_list_name_no_repeat": "The name of the form item cannot be repeated.",
   "valid.input.hex_number": "Only hexadecimal values ​​are allowed.",
   "valid.input.image": "Please choose an image with .jpg, .png or .jpeg file format.",
+  "valid.input.integer_positive": "Only positive integers are allowed.",
   "valid.input.integer_positive_negative_zero": "Please enter a positive/negative integer, or zero.",
   "valid.input.integer_positive_zero": "Please enter a positive integer (Includes Zero).",
-  "valid.input.integer_positive": "Please enter a positive integer.",
   "valid.input.ip_address": "Please enter your IP address in the following format: XXX.XXX.XXX.XXX. XXX should be 1-255.",
   "valid.input.ip_or_domain": "Please enter a valid IP address or domain name.",
   "valid.input.ipv6_address": "Please enter your IP address in this format: XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX (XXXX is 0000-FFFF).",
