--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -19,7 +19,9 @@
     "error.http.device_template_validate_error": "Device template validation error",
     "error.http.duplicated_device_eui": "Device with the same EUI already exists.",
     "error.http.duplicated_gateway_eui": "Gateway with the same EUI already exists.",
+    "error.http.entity_attribute_min_greater_than_max": "The minimum value of the entity should not be greater than the maximum value.",
     "error.http.entity_attribute_min_invalid": "The minimum value for entity attributes must be a number.",
+    "error.http.entity_attribute_min_length_greater_than_max_length": "The minimum length of an entity should not exceed the maximum length.",
     "error.http.entity_tag_name_already_exists": "The tag name already exists.",
     "error.http.entity_tag_not_found": "There are unavailable tags. Please select again.",
     "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
