--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -313,7 +313,9 @@
   "error.http.device_template_validate_error": "设备模板校验出错。",
   "error.http.duplicated_device_eui": "已存在相同的EUI的设备。",
   "error.http.duplicated_gateway_eui": "已存在相同EUI的网关。",
+  "error.http.entity_attribute_min_greater_than_max": "The minimum value of the entity should not be greater than the maximum value.",
   "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字。",
+  "error.http.entity_attribute_min_length_greater_than_max_length": "实体的最小长度不应大于最大长度。",
   "error.http.entity_tag_name_already_exists": "标签名称已存在。",
   "error.http.entity_tag_not_found": "存在不可用标签，请重新选择。",
   "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
@@ -584,9 +586,9 @@
   "valid.input.form_list_name_no_repeat": "表单项名称不能重复。",
   "valid.input.hex_number": "只允许十六进制数值。",
   "valid.input.image": "请选择.jpg、.png或.jpeg格式的图片。",
+  "valid.input.integer_positive": "只允许输入正整数。",
   "valid.input.integer_positive_negative_zero": "请输入正整数/负整数或零。",
   "valid.input.integer_positive_zero": "请输入正整数（包括零）。",
-  "valid.input.integer_positive": "请输入正整数。",
   "valid.input.ip_address": "请输入IP地址，格式为XXX.XXX.XXX.XXX，XXX应为1-255。",
   "valid.input.ip_or_domain": "请输入有效的IP地址或域名。",
   "valid.input.ipv6_address": "请输入IP地址，格式为XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX（XXXX为0000-FFFF）。",
