--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -19,7 +19,9 @@
     "error.http.device_template_validate_error": "设备模板校验出错。",
     "error.http.duplicated_device_eui": "已存在相同的EUI的设备。",
     "error.http.duplicated_gateway_eui": "已存在相同EUI的网关。",
+    "error.http.entity_attribute_min_greater_than_max": "The minimum value of the entity should not be greater than the maximum value.",
     "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字。",
+    "error.http.entity_attribute_min_length_greater_than_max_length": "实体的最小长度不应大于最大长度。",
     "error.http.entity_tag_name_already_exists": "标签名称已存在。",
     "error.http.entity_tag_not_found": "存在不可用标签，请重新选择。",
     "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
