--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -221,9 +221,9 @@
     "valid.input.form_list_name_no_repeat": "表单项名称不能重复。",
     "valid.input.hex_number": "只允许十六进制数值。",
     "valid.input.image": "请选择.jpg、.png或.jpeg格式的图片。",
+    "valid.input.integer_positive": "只允许输入正整数。",
     "valid.input.integer_positive_negative_zero": "请输入正整数/负整数或零。",
     "valid.input.integer_positive_zero": "请输入正整数（包括零）。",
-    "valid.input.integer_positive": "请输入正整数。",
     "valid.input.ip_address": "请输入IP地址，格式为XXX.XXX.XXX.XXX，XXX应为1-255。",
     "valid.input.ip_or_domain": "请输入有效的IP地址或域名。",
     "valid.input.ipv6_address": "请输入IP地址，格式为XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX:XXXX（XXXX为0000-FFFF）。",
