feat: Gateway ns integration is optimized, if the previous request is not completed, the new request will not be sent

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -458,7 +458,7 @@
   "setting.integration.label.setup_app": "Setup an App",
   "setting.integration.label.status": "Gateway Status",
   "setting.integration.label.sub_device": "Subdevices",
-  "setting.integration.label.syncable_device": "Syncable Devices ({1})",
+  "setting.integration.label.syncable_device": "Syncable Devices",
   "setting.integration.label.synced_device": "Added devices",
   "setting.integration.label.synchronize": "Synchronize",
   "setting.integration.label.topic": "Topic",
