chore: Import i18n texts

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -346,6 +346,14 @@
   "error.http.number_of_entity_tags_exceeded": "The number of tags created exceeds the limit.",
   "error.http.number_of_tags_per_entity_exceeded": "The maximum number of tags that can be added to a single entity has been reached.",
   "error.http.page_not_found": "Sorry, the page you visited does not exist.",
+  "error.http.parameter_greater_than_max_value": "The value of  “{field}” is greater than the maximum value and needs to be less than or equal to {value}.",
+  "error.http.parameter_less_than_min_value": "The value of “{field}” is less than the minimum value and needs to be greater than or equal to {value}.",
+  "error.http.parameter_must_be_a_email_address": "The content of the parameter “{field}” must match the email address format.",
+  "error.http.parameter_must_not_be_blank": "The value of the parameter “{field}” cannot be an whitespace string.",
+  "error.http.parameter_must_not_be_empty": "The value of the “{field}” cannot be an empty string or an empty set.",
+  "error.http.parameter_must_not_be_null": "The value of the “{field}” cannot be empty.",
+  "error.http.parameter_pattern_invalid": "The format of \"{field}\" does not comply with the rules, need to match the regular expression: “{regex}”。",
+  "error.http.parameter_size_invalid": "The length of the “{field}” is not within the valid range. (Valid range: {min} - {max})",
   "error.http.parameter_syntax_error": "Parameter syntax error",
   "error.http.parameter_validation_failed": "Parameter validation failed",
   "error.http.request_too_frequently": "Request too frequently",
@@ -458,7 +466,7 @@
   "setting.integration.label.setup_app": "Setup an App",
   "setting.integration.label.status": "Gateway Status",
   "setting.integration.label.sub_device": "Subdevices",
-  "setting.integration.label.syncable_device": "Syncable Devices",
+  "setting.integration.label.syncable_device": "Syncable Devices ",
   "setting.integration.label.synced_device": "Added devices",
   "setting.integration.label.synchronize": "Synchronize",
   "setting.integration.label.topic": "Topic",
