--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -52,6 +52,14 @@
     "error.http.number_of_entity_tags_exceeded": "创建的标签数量超过上限。",
     "error.http.number_of_tags_per_entity_exceeded": "单个实体可添加的标签数量已达上限。",
     "error.http.page_not_found": "抱歉，您访问的页面不存在。",
+    "error.http.parameter_greater_than_max_value": "参数\"{field}\"的值大于最大值，需要小于与等于{value}。",
+    "error.http.parameter_less_than_min_value": "参数\"{field}\"的值小于最小值，需要大于与等于{value}。",
+    "error.http.parameter_must_be_a_email_address": "参数\"{field}\"的内容需要匹配邮箱地址格式。",
+    "error.http.parameter_must_not_be_blank": "参数\"{field}\"的值不允许为空白字符串。",
+    "error.http.parameter_must_not_be_empty": "参数\"{field}\"的值不允许为空字符串或空集合。",
+    "error.http.parameter_must_not_be_null": "参数\"{field}\"的值不允许为空。",
+    "error.http.parameter_pattern_invalid": "参数\"{field}\"的格式不符合规则，需要匹配正则表达式: “{regex}”。",
+    "error.http.parameter_size_invalid": "参数\"{field}\"的长度不在合法范围内。(合法区间:{min}-{max})",
     "error.http.parameter_syntax_error": "参数语法错误",
     "error.http.parameter_validation_failed": "参数验证失败",
     "error.http.request_too_frequently": "请求过于频繁",
